--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "jasetran/dll-example.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "miffy.png"
   name             : "Your Sidebar Name"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
